# arch-review

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: Dockerfile  llm.py  main.py  metrics.py  settings.py
app/chat/: __init__.py
app/chat/application/dto/: __init__.py  chat_dto.py
app/chat/application/use_cases/: __init__.py  answer_question.py
app/chat/domain/: __init__.py
app/chat/infrastructure/: __init__.py  factory.py
app/intake/infrastructure/: factory.py
db/: schema.sql
db/migrations/: 20250426000001_create_tables.sql  20250427000001_add_raptor_columns.sql
frontend/: .dockerignore  .prettierignore  DESIGN.md  Dockerfile  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: arch-review-workspace.tsx  ingest-form.tsx
frontend/src/hooks/: use-ingest.ts
frontend/tests/components/: ingest-form.test.tsx
frontend/tests/domain/: value-objects.test.ts
infra/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  app_resources.py  common.py  data_resources.py  frontend_resources.py  observability_resources.py  settings.py  shared_resources.py  stack.py
ops/: grafana-dashboard-provider.yml  grafana-datasources.yml  kind-config.yml  kind_cluster_provision.sh  prometheus.yml  pulumi_dev_stack_provision.sh  s3_bucket_provision.sh  tempo.yaml
ops/grafana-dashboards/: arch-review.json
tests/integration/: conftest.py  test_answer_question.py  test_ingest_documents.py  test_repositories.py
(+45 files in other folders)
